Re-organize classes and variables
